# ya-literal

./: README.md  cabal.project  ya-literal.cabal
Ya/: Literal.hs
Ya/Literal/: Linear.hs  List.hs  Maybe.hs  String.hs  Tuple.hs  Utils.hs
